tortenjen mar valami

--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-vdvv
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">  
+  <title>Radnoti Miki</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="profile-card">
+      <div class="head">
+        <div class="profile-image">
+          <img src="url('assets/radnoti.jpg')" alt="Radnoti Miki">
+        </div>
+        <div class="name-headline">
+          <h1>Radnóti Miklós</h1>
+          <h2>Költőke</h2>
+          <h3>From <br>
+             <i class="fa fa-map-marker"> </i>  Budapest, HU</h3>
+        </div>
+      </div>
+      <div class="content">
+        <p class="about">ARCKÉP<br>
+
+Huszonkét éves vagyok. Így<br>
+nézhetett ki ősszel Krisztus is<br>
+ennyi idősen; még nem volt<br>
+szakálla, szőke volt és lányok<br>
+álmodtak véle éjjelenként!<br>
+
+<i>1930. október 11.</i>
+  
+        </p>
+        <section class="links">
+          <h1>Contact me via:</h1>
+          <ul>
+          <li><a href="https://hu.wikipedia.org/wiki/Radn%C3%B3ti_Mikl%C3%B3s" class="link"><i class="fa fa-wikipedia"></i></a>
+          <li><a href="https://www.facebook.com/profile.php?id=100011645404802" class="link"><i class="fa fa-facebook"></i></a>
+          <li><a href="https://instagram.com/#" class="link"><i class="fa fa-instagram"></i></a>
+          </ul>
+        </section>
+      </div>
+    </div>  
+</body>
+</html>
