--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="profile-card">
       <div class="head">
         <div class="profile-image">
-          <img src="url('assets/radnoti.jpg')" alt="Radnoti Miki">
+          <img src="assets/radnoti.jpg" alt="Radnoti Miki">
         </div>
         <div class="name-headline">
           <h1>Radnóti Miklós</h1>
