--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">  
+ <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Stylish" rel="stylesheet"> 
   <title>Radnoti Miki</title>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+	<div class="profile-image">
+      <img src="assets/radnoti.jpg" alt="Radnoti Miki">
+  </div>
     <div class="profile-card">
       <div class="head">
-        <div class="profile-image">
-          <img src="assets/radnoti.jpg" alt="Radnoti Miki">
-        </div>
         <div class="name-headline">
           <h1>Radnóti Miklós</h1>
           <h2>Költőke</h2>
