--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 	<div class="profile-image">
       <img src="assets/radnoti.jpg" alt="Radnoti Miki">
   </div>
-    <div class="profile-card">
-      <div class="head">
+	<div class="card"> <div class="head">
         <div class="name-headline">
           <h1>Radnóti Miklós</h1>
           <h2>Költőke</h2>
@@ -40,7 +39,9 @@ szakálla, szőke volt és lányok<br>
           <li><a href="https://instagram.com/#" class="link"><i class="fa fa-instagram"></i></a>
           </ul>
         </section>
-      </div>
+      </div></div>
+	<div class="profile-card">
+      
     </div>  
 </body>
 </html>
